<resources>
    <string name="app_name">PCMap</string>
    <string name="title_activity_maps">Map</string>

    <string name="home_map">Price Center Directory</string>
    <string name="home_game">Solar Interact</string>

    <string name="map_f1">Floor 1</string>
    <string name="map_f2">Floor 2</string>
    <string name="map_f3">Floor 3</string>
    <string name="map_f4">Floor 4</string>
    <string name="map_home">Home</string>
    <string name="map_search">Search</string>
    <string name="map_clear">Clear</string>
    <string name="map_textSearch">search PC &#8230;</string>

    <string name="si_play">Start</string>
    <string name="si_scoreboard">Scoreboard</string>
    <string name="si_back">Back to Home</string>

    <string name="si_diff_play">Play</string>
    <string name="si_diff_easy">Easy</string>
    <string name="si_diff_medium">Medium</string>
    <string name="si_diff_hard">Hard</string>
    <string name="si_diff_back">Back to Menu</string>
    <string name="si_diff_text">Select a difficulty setting:</string>

    <string name="si_crank_pause">Pause (TODO implement)</string>
    <string name="si_crank_diff">Difficulty Setting:</string>
    <string name="si_crank_rating">Difficulty Rating:</string>
    <string name="si_crank_playerScore">Player score:</string>
    <string name="si_crank_solarScore">Solar score:</string>
    <!-- TODO REMOVE BELOW LINE WHEN GAME IS IMPLEMENTED -->
    <string name="si_crank_scoreREMOVE">DELETE ME Click me to increase the score!</string>
    <!-- TODO REMOVE BELOW LINE WHEN GAME IS IMPLEMENTED -->
    <string name="si_crank_tempREMOVE">DELETE ME Go to Scores</string>

    <string name="si_scores_scoreboard">Go to scoreboard</string>
    <string name="si_scores_playerScore">Your score:</string>
    <string name="si_scores_solarScore">Solar Panel score:</string>
    <string name="si_scores_result">win/lose</string>

    <string name="si_scoreboard_goBack">Back to Menu</string>
    <string name="si_scoreboard_tempDisplay">Top scores</string>
</resources>