<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <Button
        android:id="@+id/Play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="play"
        android:text="@string/si_diff_play"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/Easy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/si_diff_easy"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <Button
        android:id="@+id/Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/si_diff_medium"
        android:layout_alignBaseline="@+id/Hard"
        android:layout_alignBottom="@+id/Hard"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:id="@+id/Hard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/si_diff_hard"
        android:layout_alignBaseline="@+id/Easy"
        android:layout_alignBottom="@+id/Easy"
        android:layout_alignLeft="@+id/Play"
        android:layout_alignStart="@+id/Play"/>

    <Button
        android:id="@+id/Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goBack"
        android:text="@string/si_diff_back"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>