<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:text="@string/map_f1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/floor1"
        android:onClick="clickFloor1"/>

    <AutoCompleteTextView
        android:hint="@string/map_textSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/autoCompleteTextView"
        android:layout_toStartOf="@+id/Clear"
        android:imeOptions="actionDone"
        android:layout_toLeftOf="@+id/Clear" />

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mapFragment"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/autoCompleteTextView"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_alignParentTop="true" />

    <Button
        android:text="@string/map_f4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/floor4"
        android:onClick="clickFloor4"
        android:layout_below="@+id/floor3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/map_f2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/floor2"
        android:onClick="clickFloor2"
        android:layout_below="@+id/floor1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/map_f3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/floor3"
        android:onClick="clickFloor3"
        android:layout_below="@+id/floor2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/search_button"
        android:text="@string/map_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:layout_alignBaseline="@+id/autoCompleteTextView"
        android:layout_alignBottom="@+id/autoCompleteTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/Home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:onClick="goHome"
        android:text="@string/map_home" />

    <Button
        android:id="@+id/Clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map_clear"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/search_button"
        android:layout_below="@+id/mapFragment"
        android:layout_toLeftOf="@+id/search_button" />

</RelativeLayout>